--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "npm run lint && mocha",
     "lint": "node node_modules/eslint/bin/eslint.js ./src",
-    "lint:fix": "node node_modules/eslint/bin/eslint.js ./src --fix"
+    "lint:fix": "node node_modules/eslint/bin/eslint.js ./src --fix",
+    "final-test": "npm run test --test test/functions-tests.js"
   },
   "repository": {
     "type": "git",
